--- a/tools/peview/peview.vcxproj.filters
+++ b/tools/peview/peview.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="include\dia2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\metahost.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="peview.rc">
