--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -385,6 +385,7 @@
     <ClInclude Include="colmgr.h" />
     <ClInclude Include="include\cvconst.h" />
     <ClInclude Include="include\dia2.h" />
+    <ClInclude Include="include\metahost.h" />
     <ClInclude Include="include\peview.h" />
     <ClInclude Include="include\prpsh.h" />
     <ClInclude Include="resource.h" />
