--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 # Build image.
-#image: Visual Studio 2019
+image: Visual Studio 2019 Preview
 #cache: C:\projects\processhacker
 
 # Version format.
