peview: Add mscoree.h

--- a/tools/peview/peview.vcxproj.filters
+++ b/tools/peview/peview.vcxproj.filters
@@ -152,6 +152,9 @@
     <ClInclude Include="include\metahost.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\mscoree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="peview.rc">
