--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -386,6 +386,7 @@
     <ClInclude Include="include\cvconst.h" />
     <ClInclude Include="include\dia2.h" />
     <ClInclude Include="include\metahost.h" />
+    <ClInclude Include="include\mscoree.h" />
     <ClInclude Include="include\peview.h" />
     <ClInclude Include="include\prpsh.h" />
     <ClInclude Include="resource.h" />
