Add searchbox to advanced options, Update advanced options page layout

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -744,7 +744,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Advanced"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_SETTINGS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,303,211
+    EDITTEXT        IDC_SEARCH,171,3,144,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Options",IDC_FILTEROPTIONS,2,3,50,14
+    CONTROL         "",IDC_SETTINGS,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0xa,2,19,313,204,WS_EX_CLIENTEDGE
 END
 
 IDD_GDIHANDLES DIALOGEX 0, 0, 351, 307
