Add refresh to advanved options

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -747,6 +747,7 @@ BEGIN
     EDITTEXT        IDC_SEARCH,171,3,144,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Options",IDC_FILTEROPTIONS,2,3,50,14
     CONTROL         "",IDC_SETTINGS,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0xa,2,19,313,204,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Refresh",IDC_REFRESH,53,3,50,14
 END
 
 IDD_GDIHANDLES DIALOGEX 0, 0, 351, 307
