Update column chooser window layout

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -669,22 +669,24 @@ BEGIN
     PUSHBUTTON      "Disable all",IDC_DISABLEALL,193,153,50,14
 END
 
-IDD_CHOOSECOLUMNS DIALOGEX 0, 0, 381, 207
+IDD_CHOOSECOLUMNS DIALOGEX 0, 0, 381, 226
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Choose Columns"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Select the columns that will appear in the list.",IDC_MESSAGE,7,7,367,10
     LTEXT           "Inactive columns:",IDC_STATIC,7,21,57,8
-    LISTBOX         IDC_INACTIVE,7,31,129,150,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Show >",IDC_SHOW,139,86,50,14
-    PUSHBUTTON      "< Hide",IDC_HIDE,139,103,50,14
-    LISTBOX         IDC_ACTIVE,192,31,129,150,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Move up",IDC_MOVEUP,324,31,50,14
-    PUSHBUTTON      "Move down",IDC_MOVEDOWN,324,48,50,14
-    DEFPUSHBUTTON   "OK",IDOK,272,186,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,324,186,50,14
+    LISTBOX         IDC_INACTIVE,7,49,129,153,LBS_SORT | LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Show >",IDC_SHOW,139,105,50,14
+    PUSHBUTTON      "< Hide",IDC_HIDE,139,121,50,14
+    LISTBOX         IDC_ACTIVE,192,49,129,153,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Move up",IDC_MOVEUP,326,49,50,14
+    PUSHBUTTON      "Move down",IDC_MOVEDOWN,326,66,50,14
+    DEFPUSHBUTTON   "OK",IDOK,272,206,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,326,206,50,14
     LTEXT           "Active columns:",IDC_STATIC,192,21,51,8
+    LTEXT           "Select the columns that will appear in the list.",IDC_MESSAGE,7,7,369,10
+    EDITTEXT        IDC_SEARCH,7,33,129,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_FILTER,192,33,129,14,ES_AUTOHSCROLL
 END
 
 IDD_NETSTACK DIALOGEX 0, 0, 261, 228
@@ -1625,9 +1627,9 @@ BEGIN
     IDD_CHOOSECOLUMNS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 374
+        RIGHTMARGIN, 376
         TOPMARGIN, 7
-        BOTTOMMARGIN, 200
+        BOTTOMMARGIN, 220
     END
 
     IDD_NETSTACK, DIALOG
