--- a/plugins/ToolStatus/ToolStatus.rc
+++ b/plugins/ToolStatus/ToolStatus.rc
@@ -48,20 +48,22 @@ END
 // Dialog
 //
 
-IDD_OPTIONS DIALOGEX 0, 0, 191, 86
+IDD_OPTIONS DIALOGEX 0, 0, 231, 147
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Enable toolbar",IDC_ENABLE_TOOLBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,62,10
-    CONTROL         "Enable status bar",IDC_ENABLE_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,19,72,10
+    CONTROL         "Enable toolbar",IDC_ENABLE_TOOLBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,29,62,10
+    CONTROL         "Enable status bar",IDC_ENABLE_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,41,72,10
     CONTROL         "Resolve ghost windows to hung windows",IDC_RESOLVEGHOSTWINDOWS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,31,152,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,53,152,10
     CONTROL         "Auto-hide main menu (Alt or F10 key toggle)",IDC_ENABLE_AUTOHIDE_MENU,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,43,157,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,65,157,10
     CONTROL         "Enable auto focus to search box",IDC_ENABLE_AUTOFOCUS_SEARCH,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,55,113,10
-    LTEXT           "Note: Right-click the toolbar on the main window to customize the icons and graphs.",IDC_STATIC,7,70,157,18
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,77,113,10
+    LTEXT           "Note: Right-click the toolbar on the main window to customize the icons and graphs.",IDC_STATIC,7,7,157,18
+    COMBOBOX        IDC_CURRENT,7,115,119,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Select the graph for the taskbar window icon:",IDC_STATIC,7,104,147,8
 END
 
 IDD_CUSTOMIZE_TB DIALOGEX 0, 0, 369, 188
@@ -117,9 +119,9 @@ BEGIN
     IDD_OPTIONS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 184
+        RIGHTMARGIN, 224
         TOPMARGIN, 7
-        BOTTOMMARGIN, 79
+        BOTTOMMARGIN, 140
     END
 
     IDD_CUSTOMIZE_TB, DIALOG
