peview: Add tree to certificate tab

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -172,6 +172,7 @@ BEGIN
 
     IDD_PESECURITY, DIALOG
     BEGIN
+        RIGHTMARGIN, 300
     END
 
     IDD_PEEHCONT, DIALOG
@@ -424,12 +425,15 @@ BEGIN
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
 END
 
-IDD_PESECURITY DIALOGEX 0, 0, 300, 280
+IDD_PESECURITY DIALOGEX 0, 0, 301, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Security"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
+    CONTROL         "",IDC_SYMBOLTREE,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x2,0,21,298,258,WS_EX_CLIENTEDGE
+    EDITTEXT        IDC_SYMSEARCH,157,3,141,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Options",IDC_GOTO,0,3,50,14
+    PUSHBUTTON      "Refresh",IDC_RESET,52,3,50,14
 END
 
 IDD_PEEHCONT DIALOGEX 0, 0, 300, 280
