Move plugin manager to options window

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -862,10 +862,9 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS
 CAPTION "Plugins"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Changes may require a restart to take effect.",IDC_INSTRUCTION,187,262,148,8,NOT WS_VISIBLE
-    DEFPUSHBUTTON   "Close",IDOK,449,256,50,14
+    LTEXT           "Changes may require a restart to take effect.",IDC_INSTRUCTION,2,262,148,8
     CONTROL         "",IDC_PLUGINTREE,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0xa,2,2,497,253,WS_EX_CLIENTEDGE
-    PUSHBUTTON      "Disabled plugins (0)",IDC_DISABLED,2,256,72,14
+    PUSHBUTTON      "Disabled plugins (0)",IDC_DISABLED,427,256,72,14
 END
 
 IDD_HANDLESTATS DIALOGEX 0, 0, 219, 175
