peview: Add size label to security tab

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -434,6 +434,7 @@ BEGIN
     EDITTEXT        IDC_SYMSEARCH,157,3,141,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Options",IDC_GOTO,0,3,50,14
     PUSHBUTTON      "Refresh",IDC_RESET,52,3,50,14
+    LTEXT           "Static",IDC_NAME,105,6,51,8,NOT WS_VISIBLE
 END
 
 IDD_PEEHCONT DIALOGEX 0, 0, 300, 280
