ExtendedTools: Add 'Enable firewall' option for enabling the firewall monitoring tab

--- a/plugins/ExtendedTools/ExtendedTools.rc
+++ b/plugins/ExtendedTools/ExtendedTools.rc
@@ -101,7 +101,7 @@ BEGIN
     RTEXT           "Static",IDC_ZWRITEBYTESDELTA_V,82,44,56,8,SS_ENDELLIPSIS
 END
 
-IDD_OPTIONS DIALOGEX 0, 0, 215, 81
+IDD_OPTIONS DIALOGEX 0, 0, 215, 98
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -114,6 +114,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,33,130,10
     CONTROL         "Enable GPU fahrenheit temperature",IDC_ENABLEFAHRENHEITTEMP,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,59,130,10
+    CONTROL         "Enable firewall event monitoring",IDC_ENABLEFWMONITOR,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,73,118,10
 END
 
 IDD_WSWATCH DIALOGEX 0, 0, 325, 266
@@ -305,7 +307,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 208
         TOPMARGIN, 7
-        BOTTOMMARGIN, 74
+        BOTTOMMARGIN, 91
     END
 
     IDD_WSWATCH, DIALOG
