--- a/plugins/ExtendedTools/ExtendedTools.rc
+++ b/plugins/ExtendedTools/ExtendedTools.rc
@@ -251,7 +251,7 @@ END
 
 IDD_SYSINFO_GPUDETAILS DIALOGEX 0, 0, 309, 210
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "GPU Adapter Details"
+CAPTION "Firewall Rules"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_GPULIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_TABSTOP,0,0,309,210
