Add group SID in Token tab

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -269,11 +269,13 @@ BEGIN
     LTEXT           "Unknown",IDC_ELEVATED,120,29,30,8
     LTEXT           "Virtualized:",IDC_STATIC,169,29,36,8
     LTEXT           "Unknown",IDC_VIRTUALIZED,209,29,44,8
-    CONTROL         "",IDC_GROUPS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,42,246,194
+    CONTROL         "",IDC_GROUPS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,42,246,181
     PUSHBUTTON      "Integrity",IDC_INTEGRITY,149,239,50,14
     PUSHBUTTON      "Advanced",IDC_ADVANCED,203,239,50,14
     PUSHBUTTON      "Permissions",IDC_PERMISSIONS,95,239,50,14
     PUSHBUTTON      "Default token",IDC_DEFAULTPERM,41,239,50,14
+    LTEXT           "Group SID:",IDC_TOKENGROUPSID,7,226,36,8
+    EDITTEXT        IDC_GROUPSID,48,226,205,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
 IDD_HIDDENPROCESSES DIALOGEX 0, 0, 337, 221
