--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -186,6 +186,10 @@ BEGIN
     IDD_PEDEBUGCRT, DIALOG
     BEGIN
     END
+
+    IDD_PELAYOUT, DIALOG
+    BEGIN
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -459,6 +463,14 @@ CAPTION "CRT"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
+END
+
+IDD_PELAYOUT DIALOGEX 0, 0, 301, 280
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Layout"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_SYMBOLTREE,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x12,0,0,301,280
 END
 
 
