--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -699,8 +699,8 @@ BEGIN
     LISTBOX         IDC_ACTIVE,192,49,129,153,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Move up",IDC_MOVEUP,326,49,50,14
     PUSHBUTTON      "Move down",IDC_MOVEDOWN,326,66,50,14
-    DEFPUSHBUTTON   "OK",IDOK,272,206,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,326,206,50,14
+    PUSHBUTTON      "OK",IDOK,272,206,50,14
+    DEFPUSHBUTTON   "Cancel",IDCANCEL,326,206,50,14
     LTEXT           "Active columns:",IDC_STATIC,192,21,51,8
     LTEXT           "Select the columns that will appear in the list.",IDC_MESSAGE,7,7,369,10
     EDITTEXT        IDC_SEARCH,7,33,129,14,ES_AUTOHSCROLL
