ExtendedTools: Re-add wswatch with impovements (removed in commit 1eb40ce4)

--- a/plugins/ExtendedTools/ExtendedTools.vcxproj.filters
+++ b/plugins/ExtendedTools/ExtendedTools.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="fwtab.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="wswatch.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
