--- a/plugins/ExtendedTools/ExtendedTools.vcxproj
+++ b/plugins/ExtendedTools/ExtendedTools.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="thrdact.c" />
     <ClCompile Include="unldll.c" />
     <ClCompile Include="utils.c" />
+    <ClCompile Include="wswatch.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="disktabp.h" />
